src/components/HomeCard/styles.module.css
.homeCard {
  /* top: 0;
  left: 0; */
  min-height: 100vh;
  min-width: 33%;
  max-width: 40%;
  border-top-right-radius: 100px;
  border-bottom-right-radius: 100px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: stretch;
  background-color: rgb(var(--surface-rgb));
  padding: var(--page-padding);
  background: linear-gradient(rgba(0, 117, 124, 1), rgba(0, 79, 123, 1));
  transition: 0.5s;
  z-index: 9;
}

.backButtonContainer {
  display: none;
}

@media only screen and (max-width: 1360px) {
  .homeCard {
    padding-left: 4%;
    padding-right: 4%;
  }
}

@media only screen and (max-width: 1170px) {
  .homeCard {
    position: absolute;
    top: 0;
    bottom: 0;
    left: calc(0px - 100vw);
    max-width: 100%;
    padding-right: 24px;
    padding-left: 24px;
    padding-top: 0;
    padding-bottom: 24px;
    overflow-y: scroll;
  }

  .displayCard {
    left: 0;
    transition: 0.5s;
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
  }

  .backButtonContainer {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
    min-height: 96px;
  }
}

